--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:54b5a1479c276214217f1b0fe8fe906920df2173de1383d4c1b5a7e2b09e4855"
+  "signature": "sha256:f0e929e589e4418839dee9458f6c364ae179788d9c0b3f4a0952a03fc368578b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -18,8 +18,8 @@
       "import email as em\n",
       "\n",
       "# Leo los mails (poner los paths correctos).\n",
-      "ham_txt = json.load(open('./data/ham_txt.json'))\n",
-      "spam_txt = json.load(open('./data/spam_txt.json'))\n",
+      "ham_txt = json.load(open('./data/ham_dev.json'))\n",
+      "spam_txt = json.load(open('./data/spam_dev.json'))\n",
       "\n",
       "txt = ham_txt + spam_txt\n",
       "output = []\n",
@@ -61,7 +61,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 99
     },
     {
      "cell_type": "code",
