--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f0e929e589e4418839dee9458f6c364ae179788d9c0b3f4a0952a03fc368578b"
+  "signature": "sha256:50ef6cffaa1876820a9da83099309687a9f959ee52ddf01fe53b7f2dbd3c1f2a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -42,7 +42,7 @@
       "        if key in whitelist:\n",
       "            current[key] = data\n",
       "    \n",
-      "    current['email'] = email\n",
+      "    current['email'] = text\n",
       "    output.append(current)\n",
       "\n",
       "# This is the merged, created dataset\n",
@@ -50,18 +50,18 @@
       "\n",
       "# Split and save holdout and training data\n",
       "# We hold out about 10% of the data\n",
-      "mask = np.random.rand(len(df)) < 0.9\n",
+      "mask = np.random.rand(len(df)) < 0.8\n",
       "\n",
       "development = df[mask]\n",
-      "development.to_csv('./data/development.csv')\n",
+      "development.to_msgpack('./data/development.msg')\n",
       "\n",
       "holdout = df[~mask]\n",
-      "holdout.to_csv('./data/holdout.csv')"
+      "holdout.to_msgpack('./data/holdout.msg')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 99
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -77,8 +77,9 @@
      "collapsed": false,
      "input": [
       "import pandas as pd\n",
-      "import email as em\n",
+      "import email\n",
       "import re\n",
+      "import multiprocessing\n",
       "\n",
       "def generate_content_types(row):\n",
       "    email = row['email']\n",
@@ -124,8 +125,7 @@
       "    \n",
       "    return output\n",
       "\n",
-      "transformed = []\n",
-      "\n",
+      "# Functions which create the output features\n",
       "transforms = [\n",
       "    lambda row: {'class': row['class']},\n",
       "    lambda row: {'length': len(row['email'])},\n",
@@ -135,25 +135,33 @@
       "    number_of_images]\n",
       "\n",
       "# Load up development dataset\n",
-      "df = pd.read_csv('./data/development.csv')\n",
-      "df['email'] = df['email'].apply(lambda x: em.message_from_string(x))\n",
+      "print(\"Loading data\")\n",
+      "df = pd.read_msgpack('./data/development.msg')\n",
+      "df['email'] = df['email'].apply(email.message_from_string)\n",
       "\n",
-      "for index, row in df.iterrows():\n",
-      "    # Define features for row\n",
+      "# Set up thread pool\n",
+      "def transform_row(x):\n",
+      "    (index, row) = x\n",
       "    current = {}\n",
       "    \n",
       "    for function in transforms:\n",
       "        current.update(function(row))\n",
       "    \n",
-      "    transformed.append(current)\n",
+      "    return current\n",
       "\n",
+      "print(\"Processing\")\n",
+      "pool = multiprocessing.Pool(20)\n",
+      "\n",
+      "# Create dataframe\n",
+      "transformed = pool.map(transform_row, df.iterrows())\n",
+      "\n",
+      "print(\"Done!\")\n",
       "del ds\n",
       "ds = pd.DataFrame(transformed)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 97
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -182,155 +190,6 @@
       }
      ],
      "prompt_number": 86
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "res"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 87,
-       "text": [
-        "array([ 0.99439161,  0.99306592,  0.99336846,  0.99339592,  0.99178441,\n",
-        "        0.99411772,  0.99308452,  0.99407843,  0.99108395,  0.99529553])"
-       ]
-      }
-     ],
-     "prompt_number": 87
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "res"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 81,
-       "text": [
-        "array([ 0.99316149,  0.99367422,  0.99262381,  0.99577167,  0.99417681,\n",
-        "        0.99367756,  0.99419219,  0.99264319,  0.9910432 ,  0.99472852])"
-       ]
-      }
-     ],
-     "prompt_number": 81
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "ds['number_of_images'].describe(percentiles=[0.25, 0.5, 0.75, 0.9])"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 79,
-       "text": [
-        "count    36145.000000\n",
-        "mean         0.774713\n",
-        "std          3.589233\n",
-        "min          0.000000\n",
-        "25%          0.000000\n",
-        "50%          0.000000\n",
-        "75%          0.000000\n",
-        "90%          1.000000\n",
-        "max        105.000000\n",
-        "Name: number_of_images, dtype: float64"
-       ]
-      }
-     ],
-     "prompt_number": 79
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "len(train)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 89,
-       "text": [
-        "32507"
-       ]
-      }
-     ],
-     "prompt_number": 89
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "len(test)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 90,
-       "text": [
-        "3638"
-       ]
-      }
-     ],
-     "prompt_number": 90
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "len(df)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 92,
-       "text": [
-        "36145"
-       ]
-      }
-     ],
-     "prompt_number": 92
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 93,
-       "text": [
-        "36145"
-       ]
-      }
-     ],
-     "prompt_number": 93
     },
     {
      "cell_type": "code",
