--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:50ef6cffaa1876820a9da83099309687a9f959ee52ddf01fe53b7f2dbd3c1f2a"
+  "signature": "sha256:9c5e7d59ab7ce743a6a5400646059d467b0cd0573c11867f2da15c19e9b4c8e7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -60,17 +60,20 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
+     "outputs": []
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "# Load up development dataset\n",
+      "print(\"Loading data\")\n",
+      "df = pd.read_msgpack('./data/development.msg')\n",
+      "df['email'] = df['email'].apply(email.message_from_string)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 94
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -115,7 +118,7 @@
       "def number_of_images(row):\n",
       "    email = row['email']\n",
       "    output = { 'number_of_images': 0 }\n",
-      "    rgx = re.compile('(.*).(jpeg|jpg|png|gif|bmp)')\n",
+      "    rgx = re.compile('\\.(jpeg|jpg|png|gif|bmp)')\n",
       "    \n",
       "    for part in email.walk():\n",
       "        if part.get_content_type().startswith('image/'):\n",
@@ -134,11 +137,6 @@
       "    generate_number_of_spaces,\n",
       "    number_of_images]\n",
       "\n",
-      "# Load up development dataset\n",
-      "print(\"Loading data\")\n",
-      "df = pd.read_msgpack('./data/development.msg')\n",
-      "df['email'] = df['email'].apply(email.message_from_string)\n",
-      "\n",
       "# Set up thread pool\n",
       "def transform_row(x):\n",
       "    (index, row) = x\n",
@@ -156,9 +154,38 @@
       "transformed = pool.map(transform_row, df.iterrows())\n",
       "\n",
       "print(\"Done!\")\n",
-      "del ds\n",
+      "\n",
+      "try:\n",
+      "    del ds\n",
+      "except:\n",
+      "    pass\n",
+      "\n",
       "ds = pd.DataFrame(transformed)"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Loading data\n",
+        "Processing"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      }
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -178,23 +205,6 @@
       "res = cross_val_score(model, dataset, labels, cv=10, scoring='roc_auc')\n",
       "print(np.mean(res), np.std(res))"
      ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "0.993366645949 0.00117162213983\n"
-       ]
-      }
-     ],
-     "prompt_number": 86
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
