Refactored and added comments for clarity

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -2625,6 +2625,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.973493614746 0.0201790309039\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sklearn.tree\n",
+    "from sklearn.cross_validation import cross_val_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import numpy as np\n",
+    "\n",
+    "dataset = df[[x for x in df.columns if x != 'class']].values\n",
+    "labels = df['class'].apply(lambda x: x == 1)\n",
+    "model = sklearn.tree.DecisionTreeClassifier()\n",
+    "res = cross_val_score(model, dataset, labels, cv=10, scoring='accuracy')\n",
+    "print(np.mean(res), np.std(res))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "model = sklearn.tree.DecisionTreeClassifier()\n",
+    "model = model.fit(dataset, labels)\n",
+    "sklearn.tree.export_graphviz(model.tree_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.99888951,  0.99930594,  0.99944475,  0.99458559,  0.96126076,\n",
+       "        0.9583449 ,  0.9566787 ,  0.95362399,  0.9555679 ,  0.9572341 ])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
